# BppTree

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.html  annotated.html  api.html  bpp_tree_detail.html  bpptree_8hpp.html  bpptree_8hpp_source.html  builder.html  classbpptree_1_1detail_1_1BppTreeDetail-members.html  classbpptree_1_1detail_1_1BppTreeDetail.html  classbpptree_1_1detail_1_1NodePtr-members.html  classbpptree_1_1detail_1_1NodePtr.html  classbpptree_1_1detail_1_1_bpp_tree_detail-members.html  classbpptree_1_1detail_1_1_bpp_tree_detail.html  classbpptree_1_1detail_1_1_node_ptr-members.html  classbpptree_1_1detail_1_1_node_ptr.html  classes.html  common_8hpp.html  common_8hpp_source.html  dir_1f78c7d4f07b33df428ffeb02a6b2804.html  dir_5131bb87f89198dea8830a3fec216c9b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  (+595 more)
.github/workflows/: docs.yml  workflow.yml
_sources/: README.rst.txt  api.rst.txt  bpp_tree_detail.rst.txt  builder.rst.txt  index.rst.txt  indexed.rst.txt  max.rst.txt  mixin_builder.rst.txt  ordered.rst.txt  summed.rst.txt
benchmarks/: CMakeLists.txt  benchmark.cpp
docs/: Doxyfile.in  api.rst  builder.rst  conf.py  index.rst  min.rst
examples/: inverted_index.hpp
include/bpptree/: bpptree.hpp  indexed.hpp  max.hpp  min.hpp  ordered.hpp  summed.hpp
include/bpptree/detail/: common.hpp  helpers.hpp  indexed_detail.hpp  internalnodebase.hpp  iterator.hpp  minmax.hpp  (+11 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+73 more)
tests/: test_common.hpp  test_deque.cpp  test_inverted_index.cpp  test_iterator_insert_erase.cpp  test_iterators.cpp  test_min.cpp  test_ordered.cpp  test_persistent_random_modifications.cpp  test_random_modifications_indexed.cpp  test_random_modifications_ordered.cpp  test_reference_wrapper.cpp  test_sum_lower_bound.cpp  test_summed_indexed.cpp  test_uninitialized_array.cpp
